# ml_course_material

./: README.md  engine.py  example1.py  example2.py  tictactoe.py  walker.py
evolutionary_algorithm/: pyproject.toml  walker.py
game_theory/: eight_puzzle.py  engine.py  tictactoe.py
search/: bfs.py
wip/: connect_four.py  tictactoe.py
