[tool.poetry]
name = "evolutionary-algorithm"
version = "0.1.0"
description = ""
authors = ["Günther Jena <guenther@jena.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
